fixed spacing in lower section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,15 +109,12 @@ section {
   position: relative;
   width: 100%;
   padding: 3.75rem 0;
-  height: 15rem;
+  min-height: 15rem;
 }
 .overlay-content {
   padding-bottom: 1rem;
   border-radius: 4px;
   color: white;
-}
-.m-auto {
-  margin: 0 auto;
 }
 .overlay-nav button {
   background: transparent;
@@ -140,6 +137,9 @@ section {
 .overlay-nav a:nth-child(3n) > button:hover {
   color: #BA68C8;
 }
+.m-auto {
+  margin: 0 auto;
+}
 .btn:focus {
   box-shadow: none;
 }
@@ -148,6 +148,15 @@ section {
   font-family: 'Libre Franklin', sans-serif;
   font-weight: 300;
   font-size: 0.875rem;
+}
+@media screen and (max-width: 576px) {
+  section {
+    padding: 0 1rem;
+  }
+  .section-text {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
 }
 /** section: head/intro **/
 #head {
@@ -166,6 +175,7 @@ section {
   height: 100%;
 }
 .intro-col {
+  margin-bottom: 1rem;
   padding: 0 2rem;
 }
 .intro-btn {
@@ -177,11 +187,45 @@ section {
   color: white;
 }
 .img-wrapper {
-  height: 125px;
+  height: 120px;
 }
-.img-wrapper .img-fluid {
-  max-width: 75%;
-  max-height: 110px;
+.img-wrapper img {
+  max-width: 50%;
+  max-height: 108px;
+}
+#penn .intro-btn {
+  color: #01256E;
+  border-color: #01256E;
+}
+#penn .intro-btn:hover {
+  background-color: #92001A;
+  border-color: #92001A
+  color: white;
+}
+#muse .intro-btn {
+  color: #FF9100;
+  border-color: #FF9100;
+}
+#muse .intro-btn:hover {
+  background-color: #FF9100;
+  color: white;
+}
+@media screen and (max-width: 576px) {
+  .intro-col {
+    margin-bottom: 2rem;
+    padding: 0 1rem;
+  }
+  .img-wrapper {
+    height: 100px;
+  }
+  .img-wrapper img {
+    max-width: 60%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .img-wrapper img {
+    max-width: 65%;
+  }
 }
 /** section: work **/
 #work {
@@ -266,6 +310,11 @@ section {
   font-size: 1.125rem;
   margin-right: .5rem
 }
+@media screen and (max-width: 576px) {
+  #contact .overlay-content {
+    padding-right: 5rem;
+  }
+}
 /** footer **/
 footer {
   margin-top: 4rem;
@@ -295,12 +344,10 @@ p#copyright {
   font-family: 'Raleway', sans-serif;
 }
 #contact a,
-footer a {
+a {
   color: #EC407A;
-  /* color: #FF9100; */
 }
 #contact a:hover,
-footer a:hover {
+a:hover {
   color: #BA68C8;
-  text-decoration: none;
 }
